test_scores/negative_dimers/features/Q86UP2.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q86UP2.pkl.xz